z-index fix.

--- a/app/assets/stylesheets/_site.scss
+++ b/app/assets/stylesheets/_site.scss
@@ -4342,7 +4342,7 @@ body.settings {
     .feed-controls-wrap {
         position: sticky;
         top: -6px;
-        z-index: 2000;
+        z-index: 1001;
     }
     .feed-controls {
         display: flex;
